--- a/core/templates/authenticated/charts/subjectroom_performance_breakdown_popup.html
+++ b/core/templates/authenticated/charts/subjectroom_performance_breakdown_popup.html
@@ -4,6 +4,6 @@
             <ul id='subjectroombar' class="popup_bar nav nav-tabs">
             </ul>
         </div>
-        <div id="subjectroombargraph">
+        <div id="subjectroombargraph"></div>
     </div>
 </div>
