--- a/core/templates/authenticated/question/show_revision_button.html
+++ b/core/templates/authenticated/question/show_revision_button.html
@@ -1,7 +1,3 @@
-<button type="button" class="btn
-{% if not hide_revision %}
-    hide_revision_button">Hide
-{% else %}
-    show_revision_button">Show
-{% endif %}
-Revision</button>
+<span id="revision" class="float-left">
+	<button type="button" id="revision_button" class="btn">Chapter Summary</button>
+</span>
