--- a/core/templates/authenticated/submission_id/aql_info.html
+++ b/core/templates/authenticated/submission_id/aql_info.html
@@ -1,8 +1,5 @@
 <div id="aql_info">
-    <div id="aql_title">
-        <label>Title:</label><span>{{ aql_info.title }}</span>
-    </div>
     <div id="aql_description">
-        <label>Description:</label><span>{{ aql_info.description }}</span>
+        <label>Description:&nbsp;</label><span>{{ aql_info.description }}</span>
     </div>
 </div>
