--- a/core/templates/authenticated/submission_id/assignment_info.html
+++ b/core/templates/authenticated/submission_id/assignment_info.html
@@ -1,8 +1,5 @@
-<div id="assignment_info">
-    <div id="assignment_subjectroom">
-        <label>SubjectRoom:</label><span>{{ assignment_info.subjectroom }}</span>
-    </div>
-    <div id="assignment_due">
-        <label>Due At:</label><span>{{ assignment_info.due }}</span>
-    </div>
-</div>
+<span id="assignment_info" class="due-div">
+    <span id="assignment_due">
+        <span class="due-font">Due:&nbsp;{{ assignment_info.due }}</span>
+    </span>
+</span>
