--- a/core/templates/authenticated/home/parent.html
+++ b/core/templates/authenticated/home/parent.html
@@ -18,6 +18,8 @@
             {% include "authenticated/widgets/student_performance.html" with name=child_home_body.name only %}
             {% include "authenticated/widgets/printable_performance.html" with name=child_home_body.name only %}
             {% include "authenticated/widgets/section_chart_popup.html" only %}
+            {% include "authenticated/assignments_table/active_student.html" with assignments=child_home_body.active_assignments table_id_suffix=child_home_body.username only %}
+            {% include "authenticated/assignments_table/corrected_student.html" with assignments=child_home_body.corrected_assignments only %}
         </div> 
     {% endfor %}
    
