chart bugs + parent introductory refactor

--- a/core/templates/authenticated/assignments_table/corrected_teacher.html
+++ b/core/templates/authenticated/assignments_table/corrected_teacher.html
@@ -1,5 +1,5 @@
 {% extends 'authenticated/assignments_table/base_corrected.html' %}
 
 {% block title_column_data %}
-    <a class='assign_title histogram_link'>{{ assignment.title }} </a> <span class="hidden assignment_id">{{ assignment.assignment_id }}</span>  
+    <a class='histogram_link'>{{ assignment.title }} </a>
 {% endblock title_column_data %}
