--- a/core/templates/authenticated/home/parent.html
+++ b/core/templates/authenticated/home/parent.html
@@ -12,6 +12,8 @@
     {% for child_home_body in vm.authenticated_body.child_home_bodies %}
         <div class='row'>
             <h3> {{ child_home_body.name }} - {{ child_home_body.classroom }} </h3>
+            <span class='hidden child_id'>{{child_home_body.child_id}}</span>
+            <div id="parent_content"></div>
             <!-- Announcement Div-->
             {% include "authenticated/widgets/announcements_table.html" with announcements=child_home_body.announcements only %}
             {% include "authenticated/widgets/student_performance.html" with name=child_home_body.name only %}
@@ -22,6 +24,11 @@
             {% include "authenticated/assignments_table/active_student.html" with assignments=child_home_body.active_assignments only %}
             {% include "authenticated/assignments_table/corrected_student.html" with assignments=child_home_body.corrected_assignments only %}
         </div> 
+
+        <div class="row">
+            {% include "authenticated/assignments_table/active_parent.html" with assignments=child_home_body.active_assignments table_id_suffix=child_home_body.username child_id=child_home_body.child_id only %}
+            {% include "authenticated/assignments_table/corrected_parent.html" with assignments=child_home_body.corrected_assignments child_id=child_home_body.child_id only %}
+        </div>
     {% endfor %}
    
 {% endblock home_body %}
