--- a/core/templates/authenticated/assignments_table/base.html
+++ b/core/templates/authenticated/assignments_table/base.html
@@ -18,7 +18,7 @@
             <tbody>
             {% for assignment in assignments %}
                 <tr>
-                    <td>{% block title_column_data %}
+                    <td class='assign_title'>{% block title_column_data %}
                         {% include 'authenticated/widgets/link.html' with link=assignment.title only %}{% endblock title_column_data %}</td>
                     <td>{% block subject_column_data %}
                         {% include 'authenticated/widgets/link.html' with link=assignment.subject only %}
