Submission Complete. Front-end work

--- a/core/templates/authenticated/assignments_table/active_student.html
+++ b/core/templates/authenticated/assignments_table/active_student.html
@@ -5,7 +5,7 @@
 {% endblock table_header %}
 
 {% block table_id %}
-    active_assignment_table{% if table_suffix %}_{{ table_id_suffix }}{% endif %}
+    active_assignment_table
 {% endblock table_id %}
 
 {% block suffix_column_header %}
