--- a/core/templates/authenticated/charts/student_performance_breakdown_popup.html
+++ b/core/templates/authenticated/charts/student_performance_breakdown_popup.html
@@ -1,7 +1,7 @@
 <div id='performance_breakdown_popup'>
     <div>
         <ul id='subjectbar' class="popup_bar nav nav-tabs">
-            <li id="all"><a>Overall</a></li>
+            <li id="all" class="active"><a>Overall</a></li>
         </ul>
     </div>
     <div id="subject_performance">
