--- a/core/templates/authenticated/question/answer_result.html
+++ b/core/templates/authenticated/question/answer_result.html
@@ -1,7 +1,8 @@
-<span class="answer_result">
-    {% if result %}
-        CORRECT
+	{% if result %}
+<span class="correct_answer">
+        CORRECT ANSWER
     {% else %}
-        WRONG
+<span class="incorrect_answer">
+        INCORRECT ANSWER
     {% endif %}
 </span>
