--- a/core/templates/authenticated/question/show_solution_button.html
+++ b/core/templates/authenticated/question/show_solution_button.html
@@ -1,7 +1,3 @@
-<button type="button" class="btn
-{% if show_solution %}
-    hide_solution_button">Hide
-{% else %}
-    show_solution_button">Show
-{% endif %}
-Solution</button>
+<button type="button" class="btn show_solution_button">
+	Show Solution
+</button>
