--- a/core/static/css/authenticated_base.css
+++ b/core/static/css/authenticated_base.css
@@ -258,7 +258,10 @@ li{
 }
 
 .subject_teacher{
-    color:#0066BD;
+    color:#0066BD !important;
+    padding:0px 0px !important;
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
 }
 
 tr.classroom_header{
