--- a/core/static/css/submission_id.css
+++ b/core/static/css/submission_id.css
@@ -1,4 +1,4 @@
-.question_subpart_hint_hidden, .question_subpart_solution_hidden, .revision_hidden {
+.question_subpart_hint_hidden, .question_subpart_solution_hidden {
     display: none;
 }
 
@@ -7,9 +7,56 @@
 }
 
 .radio_correct, .checkbox_correct {
-    border: 1px solid green;
+    background-color:#B4EAB8;
+    padding-top:6px;
+    padding-bottom:6px;
 }
 
 .radio_incorrect, .checkbox_incorrect {
-    border: 1px solid red;
+    background-color:#EAB4B4;
+    padding-top:4px;
+    padding-bottom:4px;
+}
+
+.incorrect_answer{
+	font-weight:bold;
+	color:#B80000;
+	font-size:23px;
+	margin-top:10px;
+}
+
+.correct_answer{
+	font-weight:bold;
+	color:#00A56B;
+	font-size:23px;
+}
+
+.hide_solution_button{
+	background-color:#F9D672;
+}
+
+.show_solution_button{
+	background-color:#F9D672;
+	margin-top:10px;
+}
+
+#submission_marks{
+	padding-left: 10px;
+	padding-top:5px;
+	font-size: 23px;
+	background-color:rgba(255,255,255,0.85);
+}
+
+#corrected_submission_form .question_subpart_field{
+    margin-left:0px !important;
+    margin-top:10px;
+}
+
+#corrected_submission_form .field_wrapper{
+    margin-top:-20px !important;
+}
+
+#corrected_submission_form input[type=text]{
+    margin-left:-5px !important;
+    margin-top:25px;
 }
