--- a/core/templates/authenticated/question/correct_answer_label.html
+++ b/core/templates/authenticated/question/correct_answer_label.html
@@ -1,4 +1,4 @@
 <span class="correct_answer">
-    Ans: {{ value }}
+    CORRECT ANSWER: {{ value }}
     {% block tolerance %}{% endblock tolerance %}
 </span>
