--- a/core/templates/authenticated/question/subpart_corrected.html
+++ b/core/templates/authenticated/question/subpart_corrected.html
@@ -31,7 +31,7 @@
                 {% endwith %}
             {% endif %}
             {% if subpart.solution %}
-                {% include "authenticated/question/solution.html" with solution=subpart.solution show_solution=subpart_incorrect only %}
+                {% include "authenticated/question/solution.html" with solution=subpart.solution only %}
             {% endif %}
         {% endwith %}
     {% endwith %}
