--- a/core/templates/authenticated/subject_id/parent.html
+++ b/core/templates/authenticated/subject_id/parent.html
@@ -1,5 +1,5 @@
 {% extends 'authenticated/subject_id/student.html' %}
 
 {% block header_context %}
-    : {{ vm.authenticated_body.child_name }}
+    - {{ vm.authenticated_body.child_name }} <span id='child_id' class='hidden'>{{ vm.authenticated_body.child_id}}</span>
 {% endblock header_context %}
