--- a/core/templates/authenticated/widgets/printable_performance.html
+++ b/core/templates/authenticated/widgets/printable_performance.html
@@ -1,10 +1,10 @@
-<div class="printable_report">
+<div id="printable_report">
     <h4 class="header perf header4">{{ name }}&#39;s Performance</h4>
     <div id='printable_performance_breakdown'>
         <div id="printable_subject_performance">
-            <h5 class="header printperf header5">{{ name }}&#39;s Performance Report</h5>
+            <h5 class="header perf header5">{{ name }}&#39;s Performance Report</h5>
             {% include "authenticated/charts/printable_performance_report.html" only %}
-            <h5 class="header printperf header6">{{ name }}&#39;s Performance Breakdown</h5>
+            <h5 class="header perf header6">{{ name }}&#39;s Performance Breakdown</h5>
         </div>
     </div>
 </div>
