comments tended to

--- a/core/templates/authenticated/charts/parent_child_performance_report.html
+++ b/core/templates/authenticated/charts/parent_child_performance_report.html
@@ -1,5 +1,5 @@
-<div id="performance_report{{id}}">
-    <div id="performance_bargraph{{id}}" class='chart{{id}} scroll no-border'>
+<div id="performance_report_{{id}}">
+    <div id="performance_bargraph_{{id}}" class='chart_{{id}} scroll no-border'>
         {% include "authenticated/charts/chart_loader.html" only %}
     </div>
 </div>
