--- a/core/templates/authenticated/charts/subjectroom_performance_breakdown.html
+++ b/core/templates/authenticated/charts/subjectroom_performance_breakdown.html
@@ -1,5 +1,5 @@
 <div class='row'>
-    <h6 id='subjectroom_performance_breakdown_header' class="header header4 perf"></h6>
+    <h6 id='subjectroom_performance_breakdown_header' class="header header4"></h6>
     <div id='subjectroom_performance_breakdown'>
         <div>
             <ul id='subjectroombar' class="nav nav-tabs">
