--- a/core/templates/authenticated/widgets/classroom_performance.html
+++ b/core/templates/authenticated/widgets/classroom_performance.html
@@ -1,4 +1,4 @@
-<h4 id='classroom_performance_breakdown_header' class="header perf header4"> </h4>
+<h4 id='classroom_performance_breakdown_header' class="header header4"> </h4>
 <div id='classroom_performance_breakdown'>
     <div>
         <ul id='classroombar' class="nav nav-tabs">
