--- a/core/templates/authenticated/widgets/teacher_subjectroom_performance.html
+++ b/core/templates/authenticated/widgets/teacher_subjectroom_performance.html
@@ -1,4 +1,4 @@
-<h6 class="header header4 perf"> Subject Room Performance</h6>
+<h6 class="header header4"> Subject Room Performance</h6>
 <div id="teacher_subjectroom_performance">
     <div id="single_subjectroom_bargraph" class='chart scroll'>
         {% include "authenticated/charts/chart_loader.html" only %}
