--- a/core/templates/authenticated/charts/parent_child_printbutton.html
+++ b/core/templates/authenticated/charts/parent_child_printbutton.html
@@ -1,3 +1,3 @@
-<div id='printbutton{{id}}'>
-    <input type='button' id="print_performance{{id}}" class='btn btn-primary' value='Print Performance Report'/>
+<div id='printbutton_{{id}}'>
+    <input type='button' id="print_performance_{{id}}" class='btn btn-primary' value='Print Performance Report'/>
 </div>
