--- a/core/templates/authenticated/charts/performance_breakdown.html
+++ b/core/templates/authenticated/charts/performance_breakdown.html
@@ -1,4 +1,4 @@
-<h4 class="header perf header4">{{ name }}&#39;s Performance</h4>
+<h4 class="header header4">{{ name }}&#39;s Performance</h4>
 <div id='performance_breakdown'>
     <div>
         <ul id='subjectbar' class="nav nav-tabs">
