--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -99,11 +99,11 @@
         <a name="info"></a>
         <div id="horizontaldiv2">
             <div id="index_section1">
-                We work collaboratively with schools to provide teachers with an intuitive interface to assign homework to their students online. Our platform automatically corrects the answers and provides schools, teachers and parents with in-depth analytics to improve educational outcomes in the classroom. 
+                We provide school teachers with an intuitive interface to assign homework to their students online. Our platform automatically corrects the answers and provides school administrators, teachers and parents with in-depth analytics to improve educational outcomes in the classroom. 
                 <ul>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
-                    <span class="bullet_text">High quality question banks based on Indian curriculum</span>
+                    <span class="bullet_text">High quality question banks based on the Indian curriculum</span>
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
@@ -111,11 +111,11 @@
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
-                    <span class="bullet_text">Easy to use interface for students</span>
+                    <span class="bullet_text">Easy to use, simple interface</span>
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
-                    <span class="bullet_text">Automatic correction and statistical review </span>
+                    <span class="bullet_text">Automatic correction and statistical review</span>
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
@@ -131,7 +131,7 @@
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
-                    <span class="bullet_text">Class announcements and message interface</span>
+                    <span class="bullet_text">Class announcements and messaging interface</span>
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
@@ -150,12 +150,12 @@
             <div id="index_section2">
                 <h1>WHY IS HOMEWORK CENTRAL THE RIGHT SOLUTION?</h1>
                 <ul>
-                    <li>Teachers spend over 30% of their time correcting homework from notebooks </li>
-                    <li>Over 90% of the teachers say that homework correction was repetitive </li>
-                    <li>Teachers agree that class analytics would help identify student strengths and weaknesses </li>
-                    <li>Over 80% of students admit to copying homework from notebooks </li>
+                    <li>Teachers spend over 30% of their time correcting homework from notebooks</li>
+                    <li>Over 90% of teachers say that homework correction is repetitive </li>
+                    <li>Teachers agree that performance analytics would help identify student strengths and weaknesses </li>
+                    <li>Over 80% of students admit to copying homework from notebooks</li>
                     <li>84% of parents say they would prefer to receive more regular reports on student progress</li>
-                    <li>Administrators agree that detailed performance analytics would help evaluate and compare teaching methods </li>
+                    <li>Administrators agree detailed analytics would help evaluate and compare teaching methods </li>
                 </ul>
             </div>   
         </div>
