--- a/core/templates/authenticated/announcement.html
+++ b/core/templates/authenticated/announcement.html
@@ -1,6 +1,6 @@
 {% extends "authenticated/base.html" %}
 {% load staticfiles %}
-
+{% block title %} Create Annoucement {% endblock title %}
 {% block authenticated_body_css %}
 <link rel="stylesheet" href="{% static "css/annoucement.css" %}" type="text/css"/>
 {% endblock authenticated_body_css %}
