--- a/core/templates/authenticated/classroom_id.html
+++ b/core/templates/authenticated/classroom_id.html
@@ -1,5 +1,5 @@
 {% extends "authenticated/base.html" %}
-
+{% block title %} Classroom {% endblock title %}
 {% load staticfiles %}
 {% block authenticated_body_css %}
     {% block classroom_css %} {% endblock classroom_css %}
