--- a/core/templates/forgot_password/form.html
+++ b/core/templates/forgot_password/form.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %} Forgot Password {% endblock title %}
 
 {% block base_body %}
     <h4 class='well col-md-12' style="border-radius:0px;"> Reset your Password</h4>
