--- a/core/templates/forgot_password/mailed.html
+++ b/core/templates/forgot_password/mailed.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %} Forgot Password Reset {% endblock title %}
 {% block base_body %}
 <h4 class='well col-md-12'> Reset your Password</h4>
 <div class="indented_body_left">
