--- a/core/templates/password_reset/complete.html
+++ b/core/templates/password_reset/complete.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %} Password Reset Successful {% endblock title %}
+
 {% block base_body %}
     <div class="indented_body_left">
         <p> Your password has been updated.  You may go ahead and log in now.</p>
