--- a/core/templates/authenticated/home/base.html
+++ b/core/templates/authenticated/home/base.html
@@ -1,6 +1,7 @@
 {% extends "authenticated/base.html" %}
 
 {% load staticfiles %}
+{% block title %} Home {% endblock title %}
 {% block authenticated_body_css %}
     <link rel="stylesheet" href="{% static "css/home/base.css" %}" type="text/css"/>
     {% block home_css %} {% endblock home_css %}
