--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -1,9 +1,12 @@
 {% extends "authenticated/base.html" %}
 {% load staticfiles %}
+{% block title %} Password Reset {% endblock title %}
 
 {% block authenticated_body_css %}
     <link rel="stylesheet" href="{% static "css/password_strength.css" %}" type="text/css"/>
 {% endblock authenticated_body_css %}
+
+
 
 {% block authenticated_body %}
     <h5 class="well row topheader header5">Reset Password</h5>
