--- a/core/templates/authenticated/settings/base.html
+++ b/core/templates/authenticated/settings/base.html
@@ -1,6 +1,7 @@
 {% extends "authenticated/base.html" %}
 
 {% load staticfiles %}
+{% block title %} Settings {% endblock title %}
 {% block authenticated_body_css %}
     <link rel="stylesheet" href="{% static "css/settings.css" %}" type="text/css"/>
 {% endblock authenticated_body_css %}
