--- a/core/templates/authenticated/widgets/math_toolbox.html
+++ b/core/templates/authenticated/widgets/math_toolbox.html
@@ -1,5 +1,8 @@
 {% load staticfiles %}
 
+<!-- To include this toolbox, include the widget, the js file, the css file and on every textbox which needs it enabled add class='math_toolbox_enabled' --> 
+
+
 <button type="button" class='btn btn-default toolbox_button'>Math Toolbox</button>
 <div class="math_toolbox" title="The Math Toolbox">
     <img class="toolbox_option top_row" title="Cube" onclick="add_text('^3')"
