--- a/core/templates/authenticated/home/parent.html
+++ b/core/templates/authenticated/home/parent.html
@@ -8,20 +8,17 @@
 {% block announcements %}{% endblock announcements %}
 
 {% block home_body %} 
-    <h3 class="header header3">List of Children</h3>
      <div id="parent_content" class='hidden'></div>
     {% for child_home_body in vm.authenticated_body.child_home_bodies %}
         <div class='row'>
-            <h4 class='header header4'> Child Details </h4>
-            <h4> Name : {{ child_home_body.name }}</h4>
-            <h4> Classroom : {{child_home_body.classroom}}</h4>
+            <h3 class="header header3">{{ child_home_body.name }} : {{child_home_body.classroom}}</h3>
             <span class='hidden parent_child_id'>{{child_home_body.child_id}}</span>
            
             <!-- Announcement Div-->
             {% include "authenticated/widgets/announcements_table.html" with announcements=child_home_body.announcements only %}
             {% include "authenticated/widgets/parent_child_student_performance.html" with name=child_home_body.name id=child_home_body.child_id only %}
-            {% include "authenticated/widgets/parent_child_printable_performance.html" with name=child_home_body.name id=child_home_body.child_id only %}
             {% include "authenticated/widgets/section_chart_popup.html" only %}
+            <!-- include print performance here-->
             <!-- Assignment Div -->
             <a name="active_assignment_table_{{child_home_body.username}}"></a>
             {% include "authenticated/assignments_table/active_student.html" with assignments=child_home_body.active_assignments only %}
