--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -10,8 +10,8 @@
     <!-- Performance Div -->
     <div class='row'>
         {% include "authenticated/widgets/student_performance.html" with name=vm.sidebar.userinfo.name only %}
-        {% include "authenticated/widgets/printable_performance.html" with name=vm.sidebar.userinfo.name only %}
         {% include "authenticated/widgets/section_chart_popup.html" only %}
+         <!-- include print performance here-->
     </div>
 
 {% endblock home_body %}
