--- a/core/templates/authenticated/subject_id/base.html
+++ b/core/templates/authenticated/subject_id/base.html
@@ -1,7 +1,7 @@
 {% extends "authenticated/base.html" %}
 
 {% load staticfiles %}
-{% block title %} Subject {% endblock title %}
+{% block title %} {{ vm.authenticated_body.subjectroom_label }} {% endblock title %}
 {% block authenticated_body_css %}
     {% block subjectroom_css %} {% endblock subjectroom_css %}
 {% endblock authenticated_body_css %}
