--- a/core/templates/authenticated/widgets/parent_child_student_performance.html
+++ b/core/templates/authenticated/widgets/parent_child_student_performance.html
@@ -1,5 +1,5 @@
 <div id="stud_performance_{{id}}" class='row'>
     {% include "authenticated/charts/parent_child_performance_breakdown.html" with name=name id=id only %}
     <hr style="border-color:#d6d6d6;">
-    {% include "authenticated/charts/parent_child_printbutton.html" with id=id only %}
+    <!-- include printbutton here -->
 </div>
