--- a/core/templates/authenticated/widgets/student_performance.html
+++ b/core/templates/authenticated/widgets/student_performance.html
@@ -1,7 +1,7 @@
 <div id="stud_performance" class='row'>
     {% include "authenticated/charts/performance_breakdown.html" with name=name only %}
     <hr style="border-color:#d6d6d6;">
-    {% include "authenticated/charts/printbutton.html" only %}
+    <!-- include printbutton here-->
 </div>
 
  
