--- a/core/templates/authenticated/charts/parent_child_performance_breakdown.html
+++ b/core/templates/authenticated/charts/parent_child_performance_breakdown.html
@@ -2,7 +2,7 @@
 <div id='performance_breakdown_{{id}}'>
     <div>
         <ul id='subjectbar_{{id}}' class="nav nav-tabs">
-            <li id="all_{{id}}" class='active'><a>Overall</a></li>
+            <li id="all_{{id}}" class='active'><a title='Click to see overall performance'>Overall</a></li>
         </ul>
     </div>
     <div id="subject_performance_{{id}}">
