--- a/core/templates/authenticated/settings/parent.html
+++ b/core/templates/authenticated/settings/parent.html
@@ -1,7 +1,7 @@
 {% extends "authenticated/settings/base.html" %}
 {% block custom_data %}
     <h6 class='header header6'> Children: </h6>
-    <ul>
+    <ul id='parent_child_info_list'>
         {% for child_info in vm.authenticated_body.children %}
             <li>
                 {% include "authenticated/settings/parent_childinfo.html" with child_info=child_info only %}
