--- a/core/templates/authenticated/assignments_table/corrected_teacher.html
+++ b/core/templates/authenticated/assignments_table/corrected_teacher.html
@@ -1,5 +1,5 @@
 {% extends 'authenticated/assignments_table/base_corrected.html' %}
 
 {% block title_column_data %}
-    <a class='histogram_link'>{{ assignment.title }} </a>
+    <a title='Click here to see the assignment performance distribution' class='histogram_link'>{{ assignment.title }} </a>
 {% endblock title_column_data %}
