--- a/core/templates/authenticated/charts/performance_breakdown.html
+++ b/core/templates/authenticated/charts/performance_breakdown.html
@@ -2,7 +2,7 @@
 <div id='performance_breakdown'>
     <div>
         <ul id='subjectbar' class="nav nav-tabs">
-            <li id="all" class='active'><a>Overall</a></li>
+            <li id="all" class='active'><a title='Click to see overall performance'>Overall</a></li>
         </ul>
     </div>
     <div id="subject_performance">
