--- a/core/templates/authenticated/sidebar/classroom.html
+++ b/core/templates/authenticated/sidebar/classroom.html
@@ -1,3 +1,3 @@
 {% for element in classroom.elements %}
-    <li> <a href='#'> {{ element.label }}</a></li>
+    <li> <a title='Click to see this classroom' href='#'> {{ element.label }}</a></li>
 {% endfor %}
