title almost fixed

--- a/core/templates/authenticated/sidebar/listing_link.html
+++ b/core/templates/authenticated/sidebar/listing_link.html
@@ -1,1 +1,1 @@
-<a title={{title}} href="{% url urlname element.id %}">{{ element.label }}</a>
+<a title="{{title}}" href="{% url urlname element.id %}">{{ element.label }}</a>
