external help tips

--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -7,6 +7,7 @@
 
 {% block base_css %}
     <link rel="stylesheet" href="{% static "css/authenticated_base.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/external_help_tip.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/sidebar.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/dataTables.min.css" %}" type="text/css"/>
     {# So that each extending template can include its own stylesheet #}
